Tweak UI for certain issues in BXEGS-1604 "i18n - Proxy Issues with LTR view on Mobile with browser to Arabic"

--- a/web-app/css/proxy.css
+++ b/web-app/css/proxy.css
@@ -213,6 +213,11 @@ p.notification-msg {
     font-family: OpenSans-semibold;
 }
 
+.proxy-content-item.bold,
+.proxy-content-item-label.bold {
+    font-family: OpenSans-bold;
+}
+
 .subsection-divider {
     width: 100%;
     height: 1px;
@@ -1001,6 +1006,10 @@ th.currency-values {
     font-family: OpenSans-regular;
     margin: 0;
     padding: 0;
+}
+
+.awardPackage caption.year-award-fund.totals {
+    font-family: OpenSans-bold;
 }
 
 td.bold-font, .bold-font{
